Fix clipping of TV image (during glitch)

--- a/src/style.css
+++ b/src/style.css
@@ -117,18 +117,26 @@ h1 {
     height: auto;
     aspect-ratio: 889/627;
 
-    >div:first-child {
-      overflow: hidden;
+    >div:first-child { /* Container for tv screen content */
+      overflow: clip;
+      display: grid;
+      width: 58%;
+      height: 61%;  
+      margin-left: 9%;
+      margin-top: 9.5%;
+
+      /* > div,
+      > canvas {
+        width: 100%;
+        height: 100%;
+      } */
     }
 
     & .channel-display-canvas {
-      position: absolute;
-      background-color: transparent;
-      top: 12%;
-      left: 8%;
-      width: 60%;
-      height: 63%;
+      grid-area: 1/1;
       z-index: 1;
+
+      background-color: transparent;
       pointer-events: none;
       opacity: 0; /* Start hidden */
       animation: glitch2 1s infinite;
@@ -138,6 +146,75 @@ h1 {
         opacity: 1;
       }
     }
+
+    & .movie {
+      grid-area: 1/1;
+      overflow: hidden;
+      z-index: 0;
+      background-color: black;
+
+      & video {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        filter: blur(0.5px);
+        cursor: pointer;
+      }
+
+      & .teletext-html-content {
+        display: none; 
+        /* opacity: 0; */
+
+        position: relative;
+        z-index: 1;
+        width: 100%;
+        height: 100%;
+        background-color: rgb(18, 34, 18);
+      }
+
+      & .teletext-canvas { 
+        position: absolute;
+        top: 0%;
+        left: 0%;
+        width: 100%;
+        height: 100%;
+
+        pointer-events: none;
+        display: none; /* Initially hidden */
+        background-color: transparent;
+
+        &.visible {
+          display: block; /* Show when needed */
+        }
+      }
+
+      & .scanlines {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        left: 0;
+        top: 0;
+        background: linear-gradient(rgba(18, 16, 16, 0) 50%, rgba(0, 0, 0, 0.25) 50%), linear-gradient(90deg, rgba(255, 0, 0, 0.06), rgba(0, 255, 0, 0.02), rgba(0, 0, 255, 0.06));
+        background-size: 100% 2px, 3px 100%;
+        pointer-events: none;
+        opacity: 0.75;
+      }
+    
+      & .noise-canvas {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        left: 0;
+        top: 0;
+        pointer-events: none;
+        background-color: transparent;
+        z-index: 2;
+        opacity: 0.9;
+      }
+    
+    }    
 
     .knob-spot {
       background: rgba(255, 0, 255, 0.0) url(i/knob-spot.png) no-repeat center center;
@@ -223,78 +300,7 @@ h1 {
       pointer-events: none;
     }
 
-    & .movie {
-      position: absolute;
-      overflow: hidden;
-      top: 13%;
-      left: 8.5%;
-      width: 59%;
-      height: 61%;
-      z-index: 0;
-      background-color: black;
 
-      & video {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        filter: blur(0.5px);
-        cursor: pointer;
-      }
-
-      & .teletext-html-content {
-        display: none; 
-        /* opacity: 0; */
-
-        position: relative;
-        z-index: 1;
-        width: 100%;
-        height: 100%;
-        background-color: rgb(18, 34, 18);
-      }
-
-      & .teletext-canvas { 
-        position: absolute;
-        top: 0%;
-        left: 0%;
-        width: 100%;
-        height: 100%;
-
-        pointer-events: none;
-        display: none; /* Initially hidden */
-        background-color: transparent;
-
-        &.visible {
-          display: block; /* Show when needed */
-        }
-      }
-
-      & .scanlines {
-        width: 100%;
-        height: 100%;
-        position: absolute;
-        left: 0;
-        top: 0;
-        background: linear-gradient(rgba(18, 16, 16, 0) 50%, rgba(0, 0, 0, 0.25) 50%), linear-gradient(90deg, rgba(255, 0, 0, 0.06), rgba(0, 255, 0, 0.02), rgba(0, 0, 255, 0.06));
-        background-size: 100% 2px, 3px 100%;
-        pointer-events: none;
-        opacity: 0.75;
-      }
-    
-      & .noise-canvas {
-        width: 100%;
-        height: 100%;
-        position: absolute;
-        left: 0;
-        top: 0;
-        pointer-events: none;
-        background-color: transparent;
-        z-index: 2;
-        opacity: 0.9;
-      }
-    
-    }
 
     & .back-mask {
       position: absolute;
